# chempred

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
chempred/: base.py  config.py  experiment.py  metrics.py  preprocessing.py  utils.py
chempred/config/: __init__.py  estimators.py  functions.py  scoring.py  settings.py
docs/: mkdocs.yml
docs/docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
docs/docs/reference/: classification_explorer.md  get_available_estimators.md  missing_values_remover.md  regression_explorer.md  remove_correlated.md
tests/: create_dataset.py
tests/data/: BBBP.csv
