[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chempred"
version = "0.2.0"
description = "Simple tool for comparative analysis of ML model performance on chemistry-related predictive tasks"
authors = [
  { name = "Dr. Freddy Bernal" },
]
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = [
  "scikit-learn",
  "imbalanced-learn",
  "rdkit",
  "scikit-mol",
  "pandas",
  "numpy",
  "openpyxl",
  "tqdm",
  "lightgbm==4.6",
  "xgboost==3.0"
]

[project.urls]
Repository = "https://github.com/BernalFA/chempred"

# [tool.setuptools]
# packages = ["chempred"]
[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["chempred"]
force_sort_within_sections = true


